syntax = "proto3";
import "com/kastik/apps/data/subscribed_tags.proto";
option java_package = "com.kastik.apps.core.datastore.proto";
option java_multiple_files = true;

message ProfileProto{
  int32 id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
  string updatedAt = 5;
  bool isAuthor = 6;
  bool isAdmin = 7;
  string lastLoginAt = 8;
  string uid = 9;
  optional string deletedAt = 10;
  SubscriptionsProto subscriptions = 11;
}